syntax = "proto3";
option optimize_for = SPEED;
option java_package = "netty.FileTransfer";
option java_outer_classname = "ProtoFilePackage"; //外部类名称

message FilePackage{
  string fileName = 1;
  uint64 fileSize = 2;
  bytes contents = 3;
  string md5 = 4;
  bool hasMoreSegments = 5;
}